<resources>
    <string name="app_name">TestApp</string>
    <!-- Login -->
    <string name="iniciosesion">Inicio Sesión</string>
    <string name="bienvenida">Bienvenido a CarCare</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="olvidastecontra">¿Olvidaste tu contraseña?</string>
    <string name="bttminiciar">Iniciar</string>
    <string name="nocuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Regístrate</string>

    <!-- Registro -->
    <string name="companero">Tu compañero digital para un auto</string>
    <string name="excelenteestado">siempre en excelente estado</string>
    <string name="sicuenta">¿Ya tienes una cuenta?</string>
    <string name="bttmregistrar">Registrar</string>

    <!-- Main -->
    <string name="titulo_main">Mis autos</string>
    <string name="placa">XXX-XXX</string>
    <string name="sistemacarro">Automatico||</string>
    <string name="marca">Mercedes Beans||</string>
    <string name="modelo">EQE</string>
    <string name="ver">Ver</string>
    <string name="descripcion_todoterreno">Imagen de un todoterreno</string>
    <string name="descripcion_coche">Imagen de un coche</string>


    <!-- Mosaico -->
    <string name="descripcion_flecha">Flecha que indica la dirección hacia atras</string>
    <string name="titulo_mante">Mantenimiento</string>
    <string name="aceites">Aceites y filtros</string>
    <string name="refrigeracion">Refrigeración</string>
    <string name="frenos">Frenos</string>
    <string name="correas">Correas y cadenas</string>
    <string name="bujias">Bujías</string>
    <string name="neumaticos">Neumáticos</string>
    <string name="transmision">Sist. de Transmisión</string>
    <string name="electrico">Sistema Eléctrico</string>
    <string name="bttmregistrarmanten">Registrar mantenimiento</string>

    <!-- Registro mantenimiento -->
    <string name="registrar_mantenimiento">Registrar mantenimiento</string>
    <string name="tipo_mantenimiento">Tipo de mantenimiento</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="fecha_mantenimiento">Fecha de mantenimiento</string>
    <string name="Kilometraje">Kilometraje</string>
    <string name="kilo_actual">Actual</string>
    <string name="kilo_prox">Próximo</string>
    <string name="Fecha_proximo_mantenimiento">Fecha del próximo mantenimiento</string>
    <string name="Notas">Notas</string>
    <string name="ejm_fecha">9/10/2024</string>
    <string name="ejm_tipo">Escoge tipo</string>
    <string name="hint_dato">Escribe aqui...</string>

    <!-- Registro auto -->
    <string name="Placa_auto">Placa</string>
    <string name="hint_placa">Ingresar Placa</string>
    <string name="Año_Modelo">Año de modelo</string>
    <string name="hint_añoModelo">Ingresar año</string>
    <string name="marca_auto">Marca</string>
    <string name="Modelo_carro">Modelo</string>
    <string name="hint_marca">Seleccionar Marca</string>
    <string name="hint_modelo">Seleccionar Modelo</string>
    <string name="sistema_auto">Sistema</string>
    <string name="sistema_a">Automático</string>
    <string name="sistema_m">Mecánico</string>
    <string name="bton_img">Subir imagen</string>
    <string name="registrar_auto">Registrar un auto</string>



    <!-- Historial -->
    <string name="historial">Historial</string>
    <string name="agregar_auto">Agregar auto</string>
</resources>