<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegistroAuto"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="0.02"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/Atras_mosaico"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/descripcion_flecha"
            app:srcCompat="@drawable/arrow"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.02"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/semibold"
        android:text="@string/Placa_auto"
        android:textColor="@color/colorNegrita"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/Placa_auto"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="226dp"
        android:autofillHints=""
        android:background="@drawable/background_selecttext"
        android:backgroundTint="@color/backgroundTint"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/semibold"
        android:hint="@string/hint_placa"
        android:inputType="none"
        android:textColor="@color/colorNegrita"
        android:textColorHint="@color/textColorHint"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/semibold"
        android:text="@string/Año_Modelo"
        android:textColor="@color/colorNegrita"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Placa_auto"
        app:layout_constraintVertical_bias="0.02"/>

    <EditText
        android:id="@+id/Año_Modelo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="226dp"
        android:autofillHints=""
        android:background="@drawable/background_selecttext"
        android:backgroundTint="@color/backgroundTint"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/semibold"
        android:hint="@string/hint_añoModelo"
        android:inputType="none"
        android:textColor="@color/colorNegrita"
        android:textColorHint="@color/textColorHint"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/Marca_ModeloT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Año_Modelo"
        app:layout_constraintVertical_bias="0.01" >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintVertical_bias="0.02"

            android:fontFamily="@font/semibold"
            android:text="@string/marca_auto"
            android:textColor="@color/colorNegrita"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="132dp"
            android:fontFamily="@font/semibold"
            android:text="@string/Modelo_carro"
            android:textColor="@color/colorNegrita"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.02" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Marca_Modelo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Marca_ModeloT"
        app:layout_constraintVertical_bias="0.01" >

        <Spinner
            android:id="@+id/Marca_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/background_selecttext"
            android:backgroundTint="@color/backgroundTint"
            android:ems="10"
            android:fontFamily="@font/semibold"
            android:hint="@string/kilo_actual"
            android:inputType="number"
            android:maxLength="7"
            android:textColor="@color/colorNegrita"
            android:textColorHint="@color/textColorHint"
            android:textSize="14sp"
            android:layout_marginEnd="10dp" />

        <Spinner
            android:id="@+id/Modelo_Spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/background_selecttext"
            android:backgroundTint="@color/backgroundTint"
            android:ems="10"
            android:fontFamily="@font/semibold"
            android:hint="@string/kilo_prox"
            android:inputType="number"
            android:maxLength="7"
            android:textColor="@color/colorNegrita"
            android:textColorHint="@color/textColorHint"
            android:textSize="14sp"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintVertical_bias="0.02"
        android:fontFamily="@font/semibold"
        android:text="@string/sistema_auto"
        android:textColor="@color/colorNegrita"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Marca_Modelo" />


    <RadioGroup
        android:id="@+id/SistemaC"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.021">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/semibold"
            android:padding="5dp"
            android:text="@string/sistema_a"
            android:textColor="@color/colorNegrita"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/semibold"
            android:padding="5dp"
            android:text="@string/sistema_m"
            android:textColor="@color/colorNegrita"
            android:textSize="12sp" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/Subir_imagen"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descripcion_flecha"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SistemaC"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/BtnRegistrar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_registrar"
        android:fontFamily="@font/semibold"
        android:text="@string/bttmregistrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subir_FotoI" />

    <ImageView
        android:id="@+id/Subir_FotoI"
        android:layout_width="0dp"
        android:layout_height="184dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SistemaC"
        app:layout_constraintVertical_bias="0.323"
        app:srcCompat="@drawable/car" />


</androidx.constraintlayout.widget.ConstraintLayout>